@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.990ro"
        name="990.ro"
-       version="1.0.1"
+       version="1.0.2"
        provider-name="andiraduta">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
